styling with css. changed background colors, added borders, added grid layout, font type, color and size. both completed on main page and details page.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,11 @@
 .App {
   text-align: center;
+  color: white
 }
 
-
+.title {
+  font-family: 'Times New Roman', Times, serif;
+}
 .App-header {
   background-color: #222;
   height: 150px;
